--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -2,6 +2,7 @@
 
 .home {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
 
@@ -10,6 +11,7 @@
     height: 15rem;
     border-radius: 50%;
     object-fit: contain;
+    box-shadow: 0.3rem 0.3rem 1.2rem vars.$dark-text;
   }
 
   &__text-container {
