--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,11 @@
 $light-background: #eee;
-$highlight-text: #40b9ce;
-$light-text: #fff;
-$light-grey: #d5d5d5;
-$dark-text: #222831;
+$dark-background: #222831;
+$nav-background: rgb(1, 23, 29);
 
+$light-text: #eee;
+$dark-text: #212730;
+$highlight-text: #036e81;
+$hover-text: rgb(197, 156, 21);
+
+$light-grey: #d5d5d5;
 $gutter: 1rem;
