--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -2,7 +2,7 @@
 
 .app {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   min-height: 100vh;
 }
