--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,7 +4,7 @@ $nav-background: rgb(1, 23, 29);
 
 $light-text: #eee;
 $dark-text: #212730;
-$highlight-text: #036e81;
+$highlight-text: #379e8d;
 $hover-text: rgb(197, 156, 21);
 
 $light-grey: #d5d5d5;
