--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,11 +10,10 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 100%;
     // font-size: 1.2rem;
 
     &__logo {
-      // padding: 2 * vars.$gutter;
+      padding: 1 * vars.$gutter;
       font-weight: bold;
       font-size: 5rem;
       background-color: vars.$dark-background;
