--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -13,7 +13,7 @@
     // font-size: 1.2rem;
 
     &__logo {
-      padding: 1 * vars.$gutter;
+      padding: .8 * vars.$gutter;
       font-weight: bold;
       font-size: 5rem;
       background-color: vars.$dark-background;
