--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,10 +10,10 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    // font-size: 1.2rem;
+    font-size: 1.2rem;
 
     &__logo {
-      padding: .8 * vars.$gutter;
+      padding: 1.5 * vars.$gutter;
       font-weight: bold;
       font-size: 5rem;
       background-color: vars.$dark-background;
@@ -31,7 +31,6 @@
     &__list {
       display: flex;
       flex-direction: column;
-      // padding: 2 * vars.$gutter;
       &__item {
         padding: 1rem;
 
