add link preview

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  margin: auto;
 
   &__image {
     width: 15rem;
