--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,11 +1,11 @@
 $light-background: #eee;
 $dark-background: #222831;
-$nav-background: rgb(1, 23, 29);
+$nav-background: #01171d;
 
 $light-text: #eee;
 $dark-text: #212730;
 $highlight-text: #379e8d;
-$hover-text: rgb(197, 156, 21);
+$hover-text: #c59c15;
 
 $light-grey: #d5d5d5;
 $gutter: 1rem;
