--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -21,8 +21,7 @@
             left: 0;
             z-index: 1;
 
-            &:hover {
-                z-index: 0;
+            &--hovered {
                 display: none;
             }
 
