--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -15,14 +15,17 @@
         &__image {
             width: 100%;
             height: 100%;
-            object-fit: cover;
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 1;
+            object-fit: cover;
+            transition: width .3s, height .3s, top .3s, left .3s;
 
-            &--hovered {
-                display: none;
+            &--current {
+                top: vars.$gutter;
+                left: vars.$gutter;
+                width: 30%;
+                height: 30%;
             }
 
         }
