--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -88,6 +88,7 @@
                     
                     &:hover {
                         transform: translateY(.1rem);
+                        color: vars.$light-text;
                     }
                 }
             }
