--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -6,33 +6,78 @@
   justify-content: space-around;
   align-items: center;
   margin: auto;
-  gap: 1.5 * vars.$gutter;
+  gap: 2 * vars.$gutter;
+  overflow: hidden;
 
   &__text-container {
     display: flex;
     flex-direction: column;
     gap: 0.2 * vars.$gutter;
-    font-weight: bold;
-    font-size: 4rem;
-    overflow: hidden;
-
-    &__text {
-        animation: 2s slide-right .3s forwards;
-        transform:translateX(-100%);
+    
+    &__line {
+      transform:translateX(-5%);
+      animation:.5s fade-in ease, .5s slide-right forwards;
+      font-weight: bold;
+      font-size: 6rem;
+      letter-spacing: .4rem;
     }
-    @keyframes slide-right {
-      to {
-        transform: translateX(0);
-      }
+    
+    &__tech {
+      font-size: 1.5rem;
+      letter-spacing: .2rem;
+      opacity: 0.7;
+      color: vars.$highlight-text;
+      margin-top: 2 * vars.$gutter;
+      display: inline-block;
+      border-right: .15em solid vars.$highlight-text;
+      overflow: hidden;
+      white-space: nowrap;
+      width: 0;
+      animation: typing 3s steps(50, end) forwards .5s, blinking .75s infinite;
     }
   }
 
-  &__tech-specification {
-    width: 100%;
-    font-size: 1.5rem;
-    font-weight: bold;
-    opacity: 0.7;
-    color: vars.$highlight-text;
+  &__button {
+    margin-right: auto;
+    margin-top: 1rem;
+    animation: 3s fade-in 3s ease, 1s slide-right 3s forwards;
+    transform: translateX(-101%);
+  }
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes slide-right {
+    to {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  
+    to {
+      width: 29.9rem;
+    }
+  }
+  
+  @keyframes blinking {
+    from {
+      border-color: transparent
+    }
+  
+    to {
+      border-color: vars.$highlight-text;
+    }
   }
 }
 
