--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -8,15 +8,14 @@
     justify-content: center;
     margin: auto;
     transform:translateX(-5%);
-    animation:.5s fade-in ease,
-    .5s slide-right forwards;
 
-    &__title {
+    &__page-title {
         font-size: 5rem;
         font-weight: bold;
         color: vars.$highlight-text;
         width: 100%;
         margin-bottom: 3 * vars.$gutter;
+        width: 100%;
     }
 
     &__project-card {
@@ -24,7 +23,10 @@
         width: 25rem;
         height: 25rem;
         position: relative;
-        
+        transform: translateX(5%);
+        animation:
+            1s fade-in ease,
+            1s slide-left forwards;
         &__image {
             width: 100%;
             height: 100%;
