--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,53 @@ body {
 h2, h3, a {
     font-family: "Roboto", sans-serif;
 }
+
+h2 {
+  transform:translateX(-5%);
+  animation:3s fade-in ease,
+  1s slide-right forwards;
+  font-weight: bold;
+  font-size: 6rem;
+}
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes slide-right {
+    to {
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes slide-left {
+    to {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  
+    to {
+      width: 100%;
+    }
+  }
+  
+  @keyframes blinking {
+    from {
+      border-color: transparent
+    }
+  
+    to {
+      border-color: vars.$highlight-text;
+    }
+  }
