--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -39,7 +39,6 @@
         transform: rotate(45deg);
         
         &:hover {
-            color: vars.$hover-text;
             transform: translateX(0.2rem) rotate(45deg);
             cursor: pointer;
         }
@@ -54,25 +53,52 @@
     }
 
 
-    &__languages-container {
-      display: flex;
-      gap: 1rem;
+    // &__languages-container {
+    //   display: flex;
+    //   gap: 1rem;
 
-      &__flag {
-        width: 2rem;
-      }
-    }
+    //   &__flag {
+    //     width: 2rem;
+    //   }
+    // }
 
     &__list {
       display: flex;
       flex-direction: column;
+      transform: translateX(-100%);
       &__item {
         padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        opacity: 0;
 
         &:hover {
           color: vars.$hover-text;
           transform: translateX(-0.2rem);
           cursor: pointer;
+        }
+
+        &--about-active {
+          animation: 
+          1.5s bounce forwards,
+          .3s fade-in forwards;
+        }
+        &--skills-active {
+          animation:
+          1.5s bounce .1s forwards,
+          .3s fade-in .1s forwards;
+        }
+        
+        &--projects-active {
+          animation:
+          1.5s bounce .2s forwards,
+          .3s fade-in .2s forwards;
+        }
+        
+        &--contact-active {
+          animation:
+          1.5s bounce .3s forwards,
+          .3s fade-in .3s forwards;
         }
       }
     }
