--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,3 +59,21 @@ h2 {
       border-color: vars.$highlight-text;
     }
   }
+
+  @keyframes bounce {
+    0% {
+      transform: translateX(-100%);
+    }
+  
+    33% {
+      transform: translateX(105%);
+    }
+
+    66% {
+      transform: translateX(95%);
+    }
+
+    100% {
+      transform: translateX(100%);
+    }
+  }
