--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -4,10 +4,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
   margin: auto;
   gap: 2 * vars.$gutter;
   overflow: hidden;
+  transform: translateX(-10%);
 
   &__text-container {
     display: flex;
