--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -15,8 +15,16 @@
     gap: 0.2 * vars.$gutter;
     
     &__title {
-      // setup in styles/index.js
+      opacity: 0;
+      transform:translateX(-5%);
+      animation: 3s fade-in .5s forwards,
+      1s slide-right .5s forwards;
+      font-weight: bold;
+      font-size: 6rem;
       letter-spacing: .4rem;
+      color: vars.$dark-text;
+      font-family: "Roboto",
+      sans-serif;
     }
     
     &__tech {
