--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -7,11 +7,26 @@
     &__content {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        gap: 2 * vars.$gutter;
+        padding: 4 * vars.$gutter;
+
+        &__title {
+            min-width: 100%;
+        }
+
+        &__text {
+            opacity: 0;
+            font-size: 1.5rem;
+            animation: 1s fade-in forwards;
+        }
 
     }
 
     &__image {
+        opacity: 0;
         object-fit: cover;
         width: 50%;
+        animation: 3s fade-in forwards;
     }
 }
