--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,6 +1,14 @@
+@use "../../styles/vars";
+
 .contact {
     width: 100%;
     height: 100vh;
+    display: flex;
+
+    &__content {
+        padding: 4 * vars.$gutter;
+    }
+
     &__map {
         width: 50%;
         height: 100%;
