--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -6,7 +6,17 @@
     display: flex;
 
     &__content {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        // gap: 3 * vars.$gutter;
         padding: 4 * vars.$gutter;
+
+        &__text {
+            font-size: 1.2rem;
+            line-height: 1.5rem;
+        }
     }
 
     &__map {
