--- a/src/components/ContactForm/contact-form.scss
+++ b/src/components/ContactForm/contact-form.scss
@@ -13,6 +13,10 @@
         font-family: "Nunito", sans-serif;
         font-size: 1.2rem;
 
+        &:focus {
+            border-bottom: 2px solid vars.$highlight-text;
+        }
+
         &__name {
             width: 49.47%;
         }
@@ -37,6 +41,7 @@
 
     &__submit {
         margin-left: auto;
+        margin-top: 2rem;
         font-size: 1.2rem;
     }
 }
