--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -5,6 +5,7 @@
     max-height: 100vh;
 
     &__content {
+        width: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
