animation optimisation on about page

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -19,7 +19,7 @@
         &__text {
             opacity: 0;
             font-size: 1.5rem;
-            animation: 1s fade-in forwards;
+            animation: .5s fade-in .1s forwards;
         }
 
     }
