--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -9,6 +9,7 @@
     background-size: 200% 100%;
     background-position: 100% 0;
     transition: all 0.3s;
+    width: fit-content;
     
     &--dark {
         background: linear-gradient(to right, vars.$highlight-text 0%, vars.$highlight-text 50%, vars.$nav-background 50%, vars.$nav-background 100%);
