--- a/src/components/SuccessModal/success-modal.scss
+++ b/src/components/SuccessModal/success-modal.scss
@@ -1,7 +1,27 @@
 @use "../../styles/vars";
 
 .success-modal {
-    margin: auto;
-    font-size: 10rem;
-    font-weight: bold;
+    z-index: 2;
+        background: rgba(0, 0, 0, 0.3);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin-left: -10rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &__window {
+            border: none;
+            border-radius: .5rem;
+            background-color: vars.$light-text;
+            padding: 2 * vars.$gutter;
+            font-size: 1.5rem;
+            font-weight: bold;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 3 * vars.$gutter;
+            animation: .3s fade-in forwards;
+
+    }
 }
