--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -3,7 +3,7 @@
 .home {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   margin: auto;
   gap: 2 * vars.$gutter;
   overflow: hidden;
