--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -2,90 +2,90 @@
 
 .projects {
     display: flex;
-    flex-wrap: wrap;
-    gap: vars.$gutter;
-    justify-content: center;
-    margin: auto;
-    transform:translateX(-5%);
     min-height: 100vh;
+    padding: 4 * vars.$gutter;
+    
+    &__container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: vars.$gutter;
+        justify-content: center;
+        align-items: center;
+        // transform:translateX(-5%);
 
-    &__page-title {
-        // setup in styles/index.js
-        width: 100%;
-    }
-
-    &__project-card {
-        opacity: 0;
-        background-color: vars.$nav-background;
-        width: 25rem;
-        height: 25rem;
-        position: relative;
-        transform: translateX(100%);
-        animation:
-            1.5s fade-in forwards,
-            1s slide-left forwards;
-        &__image {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            object-fit: cover;
-            transition: width .3s, height .3s, top .3s, left .3s;
-            z-index: 1;
-
-            &--current {
-                top: vars.$gutter;
-                left: vars.$gutter;
-                width: 30%;
-                height: 30%;
+        &__project-card {
+            opacity: 0;
+            background-color: vars.$nav-background;
+            width: 25rem;
+            height: 25rem;
+            position: relative;
+            transform: translateX(100%);
+            animation:
+                1.5s fade-in forwards,
+                1s slide-left forwards;
+            &__image {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                object-fit: cover;
+                transition: width .3s, height .3s, top .3s, left .3s;
+                z-index: 1;
+    
+                &--current {
+                    top: vars.$gutter;
+                    left: vars.$gutter;
+                    width: 30%;
+                    height: 30%;
+                }
             }
-        }
-        
-        &__content {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            gap: 2 * vars.$gutter;
-            color: vars.$light-text;
-            padding: vars.$gutter;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0;
-
-            &__title {
-                margin-left: auto;
-                font-weight: bold;
-                font-size: 1.5rem;
-                width: 60%;
-                text-align: center;
-            }
-            &__techs {
+            
+            &__content {
                 display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: .5 * vars.$gutter;
-                width: 60%;
-                text-align: center;
-                margin-left: auto;
-                margin-top: -6 * vars.$gutter;
-            }
-            &__links {
-                display: flex;
-                gap: 2rem;
-                justify-content: space-evenly;
-                color: vars.$highlight-text;
-                font-weight: bold;
-
-                &__github {
-                    padding: 0.5 * vars.$gutter;
-                    transition: all 0.3s;
-                    
-                    &:hover {
-                        transform: translateY(.1rem);
-                        color: vars.$light-text;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 2 * vars.$gutter;
+                color: vars.$light-text;
+                padding: vars.$gutter;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 0;
+    
+                &__title {
+                    margin-left: auto;
+                    font-weight: bold;
+                    font-size: 1.5rem;
+                    width: 60%;
+                    text-align: center;
+                }
+                &__techs {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    gap: .5 * vars.$gutter;
+                    width: 60%;
+                    text-align: center;
+                    margin-left: auto;
+                    margin-top: -6 * vars.$gutter;
+                }
+                &__links {
+                    display: flex;
+                    gap: 2rem;
+                    justify-content: space-evenly;
+                    color: vars.$highlight-text;
+                    font-weight: bold;
+    
+                    &__github {
+                        padding: 0.5 * vars.$gutter;
+                        transition: all 0.3s;
+                        
+                        &:hover {
+                            transform: translateY(.1rem);
+                            color: vars.$light-text;
+                        }
                     }
                 }
             }
