--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,7 +6,6 @@
   bottom: 0;
 
   &__logo {
-    padding: 1.5 * vars.$gutter;
     font-weight: bold;
     font-size: 3.5rem;
     background-color: vars.$dark-background;
@@ -18,12 +17,13 @@
     background-color: vars.$nav-background;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     font-size: 1.2rem;
     transform: translateX(-100%);
     transition: all .3s;
     position: relative;
+    padding: 1.5 * vars.$gutter;
 
     &--active {
       transform: translateX(0);
@@ -115,6 +115,8 @@
       animation: .3 fade-out forwards;
       opacity: 1;
       transform: translateX(-100%);
+      position: absolute;
+      bottom: 2 * vars.$gutter;
 
       &--active {
         animation: 1s bounce-right forwards,
