--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,11 +13,11 @@ h2, h3, a {
 }
 
 h2 {
-  opacity: 0;
-  transform:translateX(-5%);
-  animation:
-    3s fade-in .5s forwards,
-    1s slide-right .5s forwards;
+  // opacity: 0;
+  // transform:translateX(-5%);
+  // animation:
+  //   3s fade-in .5s forwards,
+  //   1s slide-right .5s forwards;
   font-weight: bold;
   font-size: 6rem;
   color: vars.$highlight-text;
