--- a/src/components/Map/map.scss
+++ b/src/components/Map/map.scss
@@ -1,6 +1,6 @@
 .map-container {
-    opacity: 0;
+    // opacity: 0;
     width: 100%;
     height: 100%;
-    animation: 1s fade-in .1s forwards;
+    // animation: 1s fade-in .1s forwards;
 }
