about image modification

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -28,7 +28,9 @@
     &__image {
         // opacity: 0;
         object-fit: cover;
-        width: 50%;
+        width: 40%;
+        height: 90%;
+        margin: auto;
         // animation: 3s fade-in forwards;
     }
 }
