--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -76,7 +76,7 @@
         animation: .3 fade-out forwards;
         opacity: 1;
         transform: translateX(-100%);
-        
+
         &.active-link {
           color: vars.$hover-text;
         }
@@ -88,24 +88,24 @@
 
         &--home-active {
           animation: 
-          1s bounce-right forwards,
+          1s translate-right forwards,
           .3s fade-in forwards;
         }
         &--projects-active {
           animation:
-          1s bounce-right .1s forwards,
+          1s translate-right .1s forwards,
           .3s fade-in .1s forwards;
         }
         
         &--about-active {
           animation:
-          1s bounce-right .2s forwards,
+          1s translate-right .2s forwards,
           .3s fade-in .2s forwards;
         }
         
         &--contact-active {
           animation:
-          1s bounce-right .3s forwards,
+          1s translate-right .3s forwards,
           .3s fade-in .3s forwards;
         }
       }
@@ -123,7 +123,7 @@
       bottom: 2 * vars.$gutter;
 
       &--active {
-        animation: 1s bounce-right forwards,
+        animation: 1s translate-right forwards,
         .3s fade-in forwards;
       }
 
